---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: TBD
  Bugfixes:
    - Fixed the collision, they should now correctly squeeze through belts, rail tracks, etc.
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-28T14:19:53+01:00
  Bugfixes:
    - Fixed various runtime bugs related to upgrading to 2.0.0
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-25T23:41:15+02:00
  Major Features:
    - Added support for Factorio 2.0 and Space Age expansion. Please note that the support is highly experimental
---------------------------------------------------------------------------------------------------
Version: 1.0.7-rc
Date: 2022-06-19T20:09:37+02:00
  Bugfixes:
    - Applied a better permanent fix for the missing empty-sprite.png (#8)
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2022-06-19T12:46:35+02:00
  Bugfixes:
    - Hotfix for missing empty-sprite.png (#8)
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2022-06-11T00:02:28+02:00
  Bugfixes:
    - Fix changing belt direction (#2)
    - Do not set up collision on tiles that are not loaded
    - Fix upgrade direction #5
    - Do cliff correction when destroying cliffs (#6)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-12-06T13:55:42+01:00
  Bugfixes:
    - Ghost building paths over any other path no longer causes a duplication of the removed path
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-12-06T12:26:50+01:00
  Bugfixes:
    - Drones are again able to correctly traverse rails and belts