@@ -1,6 +1,6 @@
 {
     "name": "Updated_Construction_Drones",
-    "version": "2.0.1",
+    "version": "2.0.2",
     "title": "Updated Construction Drones",
     "author": "Tubbles",
     "contact": "",
